--- a/css/annonce.css
+++ b/css/annonce.css
@@ -26,32 +26,69 @@ nav ul li {
 }
 
 /************ Section **********/
-.h1 {
+section h1 {
     margin-left: 25%;
 }
 
 .img-annonce {
     width: 60%;
     height: 28em;
+    margin-left: 3%;
+    border-radius: 20px;
 }
 
-/************ Aside **********s**/
+/************ Aside contact ************/
 aside {
-    border: 4px solid black;
+    border: 2px solid black;
     border-radius: 2em;
     text-align: center;
     float: right;
+    margin-right: 6%;
+    padding: 0 15px 30px 15px;
 }
 
-label{
+aside label{
     color: black;
+    font-size: 20px;
 }
 
-input {
+aside input {
     border-color: black;
+    margin-left: 40px;
 }
 
+aside button {
+    background-color: #09f1668c;
+    padding: 8px 3em;
+    border: 1px solid #09f1668c;
+    border-radius: 2em;
+}
 
+/********** Description ***********/
+.description {
+    background-color: #CBBDC8;
+    border-radius: 20px;
+    width: 60%;
+    text-align: center;
+    font-size: 23px;
+    margin-left: 3%;
+    padding: 0 15px 15px 15px;
+}
+
+/************* Choix **************/
+.choix {
+    float: right;
+    background-color: #09f16689;
+    padding: 0 5% 90px 5%;
+    margin-right: 6%;
+    border-radius: 2em;
+    text-align: center;
+}
+
+.choix button {
+    padding: 8px 3em;
+    border-radius: 2em;
+}
 
 
 /*********** Footer ************/
